--- a/ProiectFinal/src/main/resources/templates/userList.html
+++ b/ProiectFinal/src/main/resources/templates/userList.html
@@ -22,7 +22,7 @@
         <td th:text="${user.id}"></td>
         <td th:text="${user.username}"></td>
         <td th:text="${user.password}"></td>
-        <td th:text="${user.mail}"></td>
+        <td th:text="${user.email}"></td>
 
     </tr>
 </table>
