--- a/ProiectFinal/src/main/resources/templates/userRegisterForm.html
+++ b/ProiectFinal/src/main/resources/templates/userRegisterForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="">
 <head>
     <title>User Registration</title>
 </head>
