index.html customization pt3

--- a/ProiectFinal/src/main/resources/templates/index.html
+++ b/ProiectFinal/src/main/resources/templates/index.html
@@ -1,82 +1,175 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>asd</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>MovieApp</title>
     <style>
+
+
         .main-header {
-    background-color: rgba(15,15,15,.99);
-    height: 80px;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
+            background-color: #333333;
+            height: 80px;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: #ffffff;
+        }
+
+        .logo {
+            text-decoration: none;
+            color: #ff0000;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+        }
+
+        .logo i {
+            margin-right: 10px;
+        }
+
+        .menu {
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            height: 100%;
+        }
+
+        li {
+            margin-right: 35px;
+            position: relative;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        li:first-child {
+            margin-left: 20px;
+        }
+
+        li:last-child {
+            margin-left: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #ffffff;
+            display: flex;
+            align-items: center;
+        }
+
+        .search {
+            margin-right: 20px;
+        }
+
+        .login-register a {
+            text-decoration: none;
+            color: #fff;
+            padding: 5px 10px;
+            margin-right: 5px;
+            background-color: #dc143c;
+            border-radius: 5px;
+        }
+        .login-register {
+            display: flex;
+            align-items: center;
 }
 
-.logo {
-    text-decoration: none;
-    color: #ff0000;
-    font-size: 24px;
-}
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            color: #333333
+        }
 
-.logo i {
-    margin-right: 10px;
-}
+        .movie-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: 10px;
+        }
 
-.navigationBar {
+        .movie-box {
+            border: 1px solid #ccc;
+            padding: 10px;
+            width: 200px;
+            height: 333px;
+            margin-bottom: 20px;
+            margin-right: 3px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            background-color: #666666;
+            transition: transform 0.2s;
+        }
 
-}
-.menu {
-    display: flex;
-    align-items: center;
-}
+        .movie-box:hover {
+            transform: scale(1.05);
+        }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
+        .movie-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffffff;
+        }
 
-li {
-    margin-right: 35px;
-     position: relative;
-}
+        .movie-description {
+            font-size: 14px;
+            margin-top: 5px;
+        }
 
-li:first-child {
-    margin-left: 20px;
-}
-li:last-child {
-    margin-left: 65px;
-}
+        .movie-images {
+            width: 100%;
+            height: 300px;
+        }
 
-a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.search{
-margin-right: 100px
-}
-
-.login-register a {
-    text-decoration: none;
-    color: #fff;
-    padding: 5px 10px;
-    margin-right: 10px;
-    background-color: #333;
-    border-radius: 5px;
-
-}
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
+        .movie-title {
+            font-size: 14px;
+            color: #f5f5f5;
+        }
 
 
+        .search-container {
+            display: flex;
+            align-items: center;
+            background-color: #333333;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            width: 300px;
+            margin: 0 auto;
+        }
 
+        .search-input {
+            border: 2px solid #333333;
+            outline: none;
+            flex-grow: 1;
+            padding: 10px;
+            font-size: 16px;
+            background: #333333;
+            color: #ffffff;
+        }
+
+        .search-button {
+            background-color: #dc143c;;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+        .search-button:hover {
+            background-color: #dc143c;
+        }
     </style>
 </head>
 <body>
@@ -103,17 +196,19 @@ body {
                 <a title="Movies" href="/filme">Movies</a>
             </li>
             <li>
-                <form action="#">
-                    <input type="text"
-                           placeholder="Search"
-                           name="search"
-                           style="width: 700px;">
-                </form>
+                <div class="search-container" style="width: 1100px;">
+                    <input type="text" class="search-input" placeholder="Search..." >
+                    <button class="search-button"  >Search</button>
+                </div>
             </li>
             <li class="login-register">
                 <div>
-                    <a title="LogIn" href="/login">Log In</a>
-                    <a title="Register" href="/register">Register</a>
+                    <li>
+                        <a title="LogIn" href="/login">Log In</a>
+                    </li>
+                    <li>
+                        <a title="Register" href="/register">Register</a>
+                    </li>
                 </div>
             </li>
 
@@ -121,7 +216,24 @@ body {
     </div>
 
 </header>
-
+<h1>Popular Movies:</h1>
+<div class="movie-container">
+    <div th:each="movie : ${movies}">
+        <div class="movie-box">
+            <img class="movie-images" th:src="@{'/images/' + ${movie.imageurl}}" alt="Movie Photo">
+            <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
+        </div>
+    </div>
+</div>
+<h1>Popular Series:</h1>
+<div class="movie-container">
+    <div th:each="series : ${serieses}">
+        <div class="movie-box">
+            <img class="movie-images" th:src="@{'/images/' + ${series.imageurl}}" alt="Series Photo">
+            <h2 class="movie-title" th:text="${series.title}">Series Title</h2>
+        </div>
+    </div>
+</div>
 
 </body>
 <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
