--- a/ProiectFinal/src/main/resources/static/css/index.css
+++ b/ProiectFinal/src/main/resources/static/css/index.css
@@ -8,7 +8,7 @@
             color: #ffffff;
         }
          body{
-          background-image: url('images/background.jpg');
+          background-image: url('/static/images/background.jpg');
           }
         .logo {
             text-decoration: none;
