--- a/ProiectFinal/src/main/resources/templates/index.html
+++ b/ProiectFinal/src/main/resources/templates/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <link th:href="@{/index.css}" rel="stylesheet" type="text/css" >
 
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
     <title>MovieApp</title>
+<style>
+    body {
+    background-color: rgb(32, 35, 37);
+    color: rgb(200, 195, 188);
+}
+</style>
 </head>
 <body>
 <header class="main-header">
@@ -40,7 +46,7 @@
             <li class="login-register">
                 <div>
                     <li>
-                        <a title="LogIn" href="/login">Log In</a>
+                        <a title="LogIn" href="/login" >Log In</a>
                     </li>
                     <li>
                         <a title="Register" href="/register">Register</a>
