--- a/ProiectFinal/src/main/resources/templates/login.html
+++ b/ProiectFinal/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <link rel="stylesheet" href="/static/css/form.css"  type="text/css">
+    <link th:href="@{/form.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body class="align">
