--- a/ProiectFinal/src/main/resources/templates/seriespage.html
+++ b/ProiectFinal/src/main/resources/templates/seriespage.html
@@ -6,41 +6,38 @@
     <link th:href="@{/index.css}" rel="stylesheet" type="text/css">
 
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
-    <title>MovieApp</title>
+    <title>MovieApp - Series</title>
     <style>
         body {
-        background-color: rgb(32, 35, 37);
-        color: rgb(200, 195, 188);
-    }
+            background-color: rgb(32, 35, 37);
+            color: rgb(200, 195, 188);
+        }
     </style>
 </head>
 <body>
 <header class="main-header">
-
     <div class="menu">
         <a href="/" class="logo">
-        <span class="logo-mini">
-           <i class="fa-solid fa-film fa-lg" style="color: #ff0000;" id="movieIcon">
-               MovieApp
-           </i>
-        </span>
+            <span class="logo-mini">
+                <i class="fa-solid fa-film fa-lg" style="color: #ff0000;" id="movieIcon">
+                    MovieApp
+                </i>
+            </span>
         </a>
         <ul>
             <li>
                 <a title="Home" href="/" aria-current="page">Home</a>
             </li>
-
             <li>
                 <a title="Series" href="/series">Series</a>
             </li>
-
             <li>
                 <a title="Movies" href="/movie">Movies</a>
             </li>
             <li>
                 <div class="search-container" style="width: 1100px;">
-                    <input type="text" class="search-input" id="search-input" placeholder="Search...">
-                    <button class="search-button" onclick="searchMoviesAndSeries()">Search</button>
+                    <input type="text" class="search-input" placeholder="Search...">
+                    <button class="search-button">Search</button>
                 </div>
             </li>
             <li class="login-register">
@@ -53,38 +50,30 @@
                     </li>
                 </div>
             </li>
-
         </ul>
     </div>
-
 </header>
-<div class="delete-button">
-    <form th:action="@{/movie/delete}" method="post">
-        <input type="number" name="movieId" placeholder="Movie ID">
-        <button type="submit">Delete Movie</button>
-    </form>
+<div class="genres-box">
+    <h2>Genres</h2>
+    <ul class="genres-list">
+        <li><a href="/series/Action">Action</a></li>
+        <li><a href="/series/Adventure">Adventure</a></li>
+        <li><a href="/series/Animation">Animation</a></li>
+        <li><a href="/series/Comedy">Comedy</a></li>
+        <li><a href="/series/Crime">Crime</a></li>
+        <li><a href="/series/Documentary">Documentary</a></li>
+        <li><a href="/series/Drama">Drama</a></li>
+        <li><a href="/series/Fantasy">Fantasy</a></li>
+        <li><a href="/series/Horror">Horror</a></li>
+        <li><a href="/series/Romance">Romance</a></li>
+        <li><a href="/series/Thriller">Thriller</a></li>
+        <li><a href="/series/War">War</a></li>
+        <li><a href="/series/Western">Western</a></li>
+    </ul>
 </div>
-<div class="delete-button">
-    <form th:action="@{/series/delete}" method="post">
-        <input type="number" name="seriesId" placeholder="Series ID">
-        <button type="submit">Delete Series</button>
-    </form>
-</div>
-
-<h1>Popular Movies:</h1>
+<h1>All Series:</h1>
 <div class="movie-container">
-    <div th:each="movie : ${movies}" class="movie-box">
-        <a th:href="@{/movie/{movieId}/{movieTitle}(movieId=${movie.id}, movieTitle=${movie.title})}">
-            <div class="movie-content">
-                <img class="movie-images" th:src="@{'/images/' + ${movie.imageurl}}" alt="Movie Photo">
-                <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
-            </div>
-        </a>
-    </div>
-</div>
-<h1>Popular Series:</h1>
-<div class="movie-container">
-    <div th:each="series : ${serieses}" class="movie-box">
+    <div th:each="series : ${serieses}" class="movie-box" data-genre="${series.genre}">
         <a th:href="@{/series/{seriesId}/{seriesTitle}(seriesId=${series.id}, seriesTitle=${series.title})}">
             <div class="movie-content">
                 <img class="movie-images" th:src="@{'/images/' + ${series.imageurl}}" alt="Series Photo">
@@ -93,8 +82,6 @@
         </a>
     </div>
 </div>
+
 </body>
-
-
 </html>
-
