--- a/ProiectFinal/src/main/resources/templates/register.html
+++ b/ProiectFinal/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link th:href="@{/form.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/form.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body class="align">
