--- a/ProiectFinal/src/main/resources/templates/login.html
+++ b/ProiectFinal/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <link th:href="@{/form.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/form.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body class="align">
@@ -11,7 +11,7 @@
 <h1>Log in</h1>
 <div class="grid">
 
-    <form th:action="@{/login}" th:object="${user}" method="POST" class="form login">
+    <form th:action="@{/login}" th:object="${user}" method="post" class="form login">
 
         <div th:if="${param.error}">
             <p style="color: red;">Invalid username or password. Please try again.</p>
