--- a/ProiectFinal/src/main/resources/templates/movie.html
+++ b/ProiectFinal/src/main/resources/templates/movie.html
@@ -4,13 +4,161 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:href="@{/index.css}" rel="stylesheet" type="text/css">
-
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
     <title>Movie Details</title>
     <style>
         body {
             background-color: rgb(32, 35, 37);
             color: rgb(200, 195, 188);
+            font-family: Arial, sans-serif;
+        }
+
+        .main-header {
+            background-color: #1a2226;
+            height: 80px;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: #ffffff;
+        }
+
+        .logo {
+            text-decoration: none;
+            color: #ff0000;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+        }
+
+        .logo i {
+            margin-right: 10px;
+        }
+
+        .menu {
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            height: 100%;
+        }
+
+        li {
+            margin-right: 35px;
+            position: relative;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            font-size: 0.99em;
+            font-weight: bold;
+        }
+
+        li:first-child {
+            margin-left: 20px;
+        }
+
+        li:last-child {
+            margin-left: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #ffffff;
+            display: flex;
+            align-items: center;
+        }
+
+        .search-container {
+            display: flex;
+            align-items: center;
+            background-color: #151b1f;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            width: 300px;
+            margin: 0 auto;
+        }
+
+        .search-input {
+            border: 2px solid #1a2226;
+            outline: none;
+            flex-grow: 1;
+            padding: 10px;
+            font-size: 16px;
+            background: #151b1f;
+            color: #ffffff;
+        }
+
+        .search-button {
+            background-color: #dc143c;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+        .movie-details {
+            text-align: center;
+            margin: 20px;
+            padding: 20px;
+            background-color: #1a2226;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            display: flex;
+        }
+
+        .movie-image {
+            max-width: 30%;
+            height: auto;
+            border-radius: 10px;
+            margin-right: 20px;
+        }
+
+        .movie-info {
+            text-align: left;
+        }
+
+        .movie-info h1 {
+            font-size: 28px;
+            margin-bottom: 10px;
+            color: #ff0000;
+        }
+
+        .movie-info p {
+            font-size: 16px;
+            margin: 10px 0;
+            color: #ccc;
+        }
+
+        .movie-trailer-input {
+            width: 100%;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #151b1f;
+            color: #ffffff;
+            margin-bottom: 20px;
+        }
+
+        .movie-trailer-button {
+            background-color: #dc143c;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        .movie-trailer-iframe {
+            width: 100%;
+            height: 650px;
         }
     </style>
 </head>
@@ -34,45 +182,45 @@
             <li>
                 <a title="Movies" href="/movie">Movies</a>
             </li>
-            <li>
-                <div class="search-container" style="width: 1100px;">
-                    <input type="text" class="search-input" placeholder="Search...">
-                    <button class="search-button">Search</button>
-                </div>
-            </li>
+
             <li class="login-register">
-                <div>
-                    <li>
-                        <a title="LogIn" href="/login">Log In</a>
-                    </li>
-                    <li>
-                        <a title="Register" href="/register">Register</a>
-                    </li>
+                <div class="login">
+                    <a title="LogIn" href="/login">Log In</a>
+                </div>
+                <div class="register">
+                    <a title="Register" href="/register">Register</a>
                 </div>
             </li>
         </ul>
     </div>
 </header>
 
-
 <div class="movie-details" th:each="movie : ${movies}">
-    <h1 th:text="${movie.title}">Movie Title</h1>
     <img class="movie-image" th:src="@{'/images/' + ${movie.imageurl}}" alt="Movie Photo">
-    <p class="movie-description" th:text="${movie.description}">
-        Movie description
-    </p>
-    <p class="movie-director" th:text="${movie.creator}">
-        Director: John Doe
-    </p>
-    <p class="movie-release" th:text="${movie.releaseYear}">
-        ReleaseYear
-    </p>
-    <p class="movie-rating" th:text="${movie.rating}">
-        Rating
-    </p>
-    <p class="movie-genre" th:text="${movie.movieGenres}">
-        Genre: Action, Drama
-    </p>
+    <div class="movie-info">
+        <h1 th:text="${movie.title}">Movie Title</h1>
+        <p class="movie-director" th:text="${movie.creator}">
+            Director: John Doe
+        </p>
+        <p class="movie-release" th:text="${movie.releaseYear}">
+            Release Year
+        </p>
+        <p class="movie-rating" th:text="${movie.rating}">
+            Rating
+        </p>
+        <p class="movie-genre" th:text="${movie.movieGenres}">
+            Genre: Action, Drama
+        </p>
+        <h1>
+            <p class="movie-description" th:text="${movie.description}">
+                Movie description
+            </p>
+        </h1>
+        <iframe class="movie-trailer-iframe" th:src="${movie.trailer}" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+        </iframe>
+    </div>
 </div>
 </body>
 </html>
