--- a/ProiectFinal/src/main/resources/templates/series-by-genre.html
+++ b/ProiectFinal/src/main/resources/templates/series-by-genre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link th:href="@{/index.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/index.css}" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
     <title>MovieApp - All Movies</title>
     <style>
@@ -16,7 +16,7 @@
 <body>
 <header class="main-header">
     <div class="menu">
-        <a href="/" class="logo">
+        <a href="/home" class="logo">
             <span class="logo-mini">
                 <i class="fa-solid fa-film fa-lg" style="color: #ff0000;" id="movieIcon">
                     MovieApp
@@ -25,7 +25,7 @@
         </a>
         <ul>
             <li>
-                <a title="Home" href="/" aria-current="page">Home</a>
+                <a title="Home" href="/home" aria-current="page">Home</a>
             </li>
             <li>
                 <a title="Series" href="/series">Series</a>
@@ -33,20 +33,13 @@
             <li>
                 <a title="Movies" href="/movie">Movies</a>
             </li>
-            <li>
-                <div class="search-container" style="width: 1100px;">
-                    <input type="text" class="search-input" placeholder="Search...">
-                    <button class="search-button">Search</button>
-                </div>
-            </li>
+
             <li class="login-register">
-                <div>
-                    <li>
-                        <a title="LogIn" href="/login">Log In</a>
-                    </li>
-                    <li>
-                        <a title="Register" href="/register">Register</a>
-                    </li>
+                <div class="login">
+                    <a title="Log In" href="/login">Log In</a>
+                </div>
+                <div class="register">
+                    <a title="Register" href="/register">Register</a>
                 </div>
             </li>
         </ul>
