--- a/ProiectFinal/src/main/resources/templates/error.html
+++ b/ProiectFinal/src/main/resources/templates/error.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login Failed</title>
+    <title>Error</title>
 </head>
 <body>
-<h1>Login Failed</h1>
-<p>Authentication was unsuccessful.</p>
+<h1>Error</h1>
+<p>There was an error</p>
 </body>
 </html>
