--- a/ProiectFinal/src/main/resources/static/css/index.css
+++ b/ProiectFinal/src/main/resources/static/css/index.css
@@ -1,4 +1,4 @@
-            .main-header {
+        .main-header {
             background-color: #1a2226;
             height: 80px;
             padding: 10px 20px;
@@ -41,7 +41,7 @@
             display: flex;
             align-items: center;
             font-size: 0.99em;
-                font-weight: bold;
+            font-weight: bold;
         }
 
         li:first-child {
@@ -92,10 +92,10 @@
 }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: rgb(32, 35, 37);
             margin: 0;
             padding: 0;
-            color: #333333
+            color: rgb(200, 195, 188);
         }
         .genres-box {
             text-align: center;
