--- a/ProiectFinal/src/main/resources/templates/series-by-genre.html
+++ b/ProiectFinal/src/main/resources/templates/series-by-genre.html
@@ -6,12 +6,7 @@
     <link th:href="@{/css/index.css}" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
     <title>MovieApp - All Movies</title>
-    <style>
-        body {
-            background-color: rgb(32, 35, 37);
-            color: rgb(200, 195, 188);
-        }
-    </style>
+
 </head>
 <body>
 <header class="main-header">
@@ -36,10 +31,12 @@
 
             <li class="login-register">
                 <div class="login">
-                    <a title="Log In" href="/login">Log In</a>
+                    <a>
+                        Hello, <span th:text="${#authentication.name}"></span>
+                    </a>
                 </div>
                 <div class="register">
-                    <a title="Register" href="/register">Register</a>
+                    <a title="Log Out" href="/logout">Log Out</a>
                 </div>
             </li>
         </ul>
