--- a/ProiectFinal/src/main/resources/templates/series.html
+++ b/ProiectFinal/src/main/resources/templates/series.html
@@ -3,146 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link th:href="@{/index.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/series.css}" rel="stylesheet" type="text/css">
 
     <script src="https://kit.fontawesome.com/ad4433a74f.js" crossorigin="anonymous"></script>
     <title>Series Details</title>
-    <style>
-        body {
-            background-color: rgb(32, 35, 37);
-            color: rgb(200, 195, 188);
-            font-family: Arial, sans-serif;
-        }
 
-        .main-header {
-            background-color: #1a2226;
-            height: 80px;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            color: #ffffff;
-        }
-
-        .logo {
-            text-decoration: none;
-            color: #ff0000;
-            font-size: 24px;
-            display: flex;
-            align-items: center;
-        }
-
-        .logo i {
-            margin-right: 10px;
-        }
-
-        .menu {
-            display: flex;
-            align-items: center;
-            height: 100%;
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            height: 100%;
-        }
-
-        li {
-            margin-right: 35px;
-            position: relative;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            font-size: 0.99em;
-            font-weight: bold;
-        }
-
-        li:first-child {
-            margin-left: 20px;
-        }
-
-        li:last-child {
-            margin-left: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #ffffff;
-            display: flex;
-            align-items: center;
-        }
-
-        .search-container {
-            display: flex;
-            align-items: center;
-            background-color: #151b1f;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 5px;
-            width: 300px;
-            margin: 0 auto;
-        }
-
-        .search-input {
-            border: 2px solid #1a2226;
-            outline: none;
-            flex-grow: 1;
-            padding: 10px;
-            font-size: 16px;
-            background: #151b1f;
-            color: #ffffff;
-        }
-
-        .search-button {
-            background-color: #dc143c;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .series-details {
-            text-align: center;
-            margin: 20px;
-            padding: 20px;
-            background-color: #1a2226;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            display: flex;
-        }
-
-        .series-image {
-            max-width: 30%;
-            height: auto;
-            border-radius: 10px;
-            margin-right: 20px;
-        }
-
-        .series-info {
-            text-align: left;
-        }
-
-        .series-info h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
-            color: #ff0000;
-        }
-
-        .series-info p {
-            font-size: 16px;
-            margin: 10px 0;
-            color: #ccc;
-        }
-
-        .series-trailer-iframe {
-            width: 100%;
-            height: 650px;
-        }
-    </style>
 </head>
 <body>
 <header class="main-header">
@@ -167,10 +32,12 @@
 
             <li class="login-register">
                 <div class="login">
-                    <a title="Log In" href="/login">Log In</a>
+                    <a>
+                        Hello, <span th:text="${#authentication.name}"></span>
+                    </a>
                 </div>
                 <div class="register">
-                    <a title="Register" href="/register">Register</a>
+                    <a title="Log Out" href="/logout">Log Out</a>
                 </div>
             </li>
         </ul>
